@@ -6,12 +6,14 @@ Changes
 COPYING
 CREDITS
 DISCLAIMER
+j
 lib/IPC/Shareable.pm
 lib/IPC/Shareable/SharedMem.pm
 Makefile.PL
 MANIFEST			This list of files
 MANIFEST.SKIP
 README
+s
 t/00-base.t
 t/02-create.t
 t/04-key.t
@@ -37,7 +39,7 @@ t/63-nested_segs_tidy.t
 t/64-nested_segs_untidy.t
 t/65-seg_size.t
 t/66-size_exceeded.t
-t/67-out_of_memory.t
+t/67-exhaust_shm_slots.t
 t/71-unspawn.t
 t/72-unspawn_destroy.t
 t/75-graceful.t
