@@ -6,7 +6,10 @@ Revision history for Perl extension IPC::Shareable.
       number exactly, casuing duplicates, and incorrect segment access
     - Added new() method, returns a reference (default hash) without having to
       do the tie() directly
-    -
+    - Modify t/65-seg_size.t beyond RAM max test to cover varying error messages
+      on differing OSs
+    - Renamed t/67-out_of_memory.t as the tests are related to exhausting SHM
+      slots, not RAM
 
 1.05    2021-07-16
     - Bump prereq version of Test::SharedFork to 0.35
